--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="btn">Get Started</string>
     <string name="main">Coffee so good,\nyour taste buds\nwill love it.</string>
     <string name="hint">The best grain, the finest roast, the\npowerful flavor.</string>
+    <string name="acc">Акция</string>
 </resources>
